# australia_parliament_attendance

./: .gitignore  README.md  pyproject.toml  requirements.txt  scraper.py
attendance/: cache_files.py  main.py  parser.py  sitting_day_attendee.py  store_sqlite.py
cache/: data-2018-2015.sqlite
