[tool.poetry]
name = "australia_parliament_attendance"
version = "0.1.0"
description = ""
authors = ["Mark Cottman-Fields <cofiem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
requests = "^2.25.1"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
