[tool.poetry]
name = "australia_parliament_attendance"
version = "0.1.0"
description = ""
authors = ["Mark Cottman-Fields <cofiem@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.6.2, < 4"
lxml = "^4.6.3"
requests = "^2.25.1"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
